# Eastmann-Adversarial

./: .gitignore  Dockerfile  Makefile  README.md  aggression_ttf.txt  constants.mod  dashboard.py  entities.f95  makefile  old_constants.f95  pyproject.toml  requirements.txt  setpoint_minmax_ttf.txt  te  te_  te_020821  te_050721  te_070421  te_120721  te_210521  te_230621  te_240521  te_280621  tecontrol.f95  tedbg_020821  tedbg_050721  tedbg_070421  tedbg_140421  tedbg_210521  tedbg_230621  tedbg_240521  tedbg_280621  teloss.f95  temain.f95  teout.f95  teprob.f95  tesense.f95  test  test.f95  tewalk.f95  (+2 more)
Original/Francesco/Fortran_files/: temain.f  teprob.f
Original/Francesco/Matlab_files/: ssex.m
Original/Francesco/Matlab_files/Final Figures/: Zoom_CFeedFlow_xmeas.fig  xmeas_dist1.fig  xmeas_dist4.fig  xmeas_diststripperunderflow.fig  xmeas_react_level_closed_gain1_tau30.fig  xmeas_without_dist.fig  xmv_4first_loops_closed_without_dist.fig  xmv_dist4.fig  xmv_distpressure.fig  xmv_distpurgegasB.fig  xmv_distratio67.fig  xmv_diststripperunderflow.fig  xmv_react_level_closed_gain1_tau30.fig  xmv_without_dist.fig
Original/Francesco/Matlab_files/Final Figures/Not used for report/: xmeas_react_temp_relaymethod.fig  xmv_dist15.fig
Original/Francesco/Matlab_files/Original/: ssanal.m  ssex.m
Original/Washington/: tecommon.inc  teprob.f
Pythonised/: actorcritic.py  agent.py  blue.py  constants.py  control.py  loss.py  main.py  makefile  pyproject.toml  red.py  report.py  requirements.txt  sense.py  teprob.py  test_blue.py  threats.py
Pythonised/colorpy/: __init__.py  blackbody.py  ciexyz.py  colormodels.py  figures.py  illuminants.py  misc.py  plots.py  rayleigh.py  test_blackbody.py  test_ciexyz.py  test_colormodels.py  test_illuminants.py  test_rayleigh.py  test_thinfilm.py  thinfilm.py
Pythonised/stategenerator/: keras_metadata.pb  saved_model.pb
Pythonised/stategenerator/variables/: variables.data-00000-of-00001  variables.index
builds/: original  te_080420  te_080421  te_141020  te_260820  tedbg_080721  tedbg_120721  tedbg_210521
env/: constants.py  control.py  main.py  report.py  sense.py  teprob.py
env/agents/: dummy.py
env/agents/continuous/: agent.py  blue.py  red.py
env/agents/discrete/: agent.py  blue.py  red.py
env/agents/twin/: agent.py  blue.py
env/agents/twin/stategenerator/: keras_metadata.pb  saved_model.pb
env/agents/twin/stategenerator/variables/: variables.data-00000-of-00001  variables.index
reference/: teprob.f95.old
reference/Francesco/Matlab_files/Final Figures/: Zoom_T_xmeas_distpressure.fig  xmeas_4first_loops_closed_without_dist.fig  xmeas_all_loops_closed_distratio67.fig  xmeas_dist8.fig  xmeas_distpressure.fig  xmeas_distpurgegasB.fig  xmv_dist1.fig  xmv_dist8.fig
reference/Francesco/Matlab_files/Final Figures/Not used for report/: xmeas_dist12.fig  xmeas_dist15.fig  xmeas_distratio40.fig  xmv_dist12.fig  xmv_distratio40.fig  xmv_react_temp_relaymethod.fig
reference/Francesco/Matlab_files/Original/: sscon.m  ssdef.m
src/: control.f95  entities.f95  main.f95  out.f95  temain.f95  teprob.f95  walk.f95
teststates/: README.txt  badstate.in  idvs.in  state.in
utils/: aggression_study.sh  clean.sh  fix_csv.sh  frequency_study.sh  idv_study.sh  loader.py  minmax_study.sh  pipe.sh  seeder.py  setpoint_study.sh  to_csv.sh
