[project]
name = "TEgym"
version = "0.1.0"
description = "Tennessee Eastman module for OpenAIgym"
authors = [
    {name = "Martyn", email = "1931150@brunel.ac.uk"},
]
requires-python = ">=3.9,<3.11"
dependencies = [
"tensorflow == 2.9.0",
"protobuf == 3.20.0",
"gym == 0.22.0",
"numpy == 1.22.3",
"matplotlib >= 3.5.0",
"pyglet == 1.5.0",
"colorpy @  git+https://github.com/martyn-smith/colorpy.git",
"pygame >= 2.4.0",
]
