[project]
name = "TEgym"
version = "0.1.0"
description = "Tennessee Eastman module for OpenAIgym"
authors = [
    {name = "Martyn", email = "1931150@brunel.ac.uk"},
]
requires-python = ">=3.11"
dependencies = [
    "tensorflow == 2.20.0",
    "numpy == 2.3.0",
    "matplotlib >= 3.5.0",
    "pyglet == 1.5.0",
    "colorpy @  git+https://github.com/martyn-smith/colorpy.git",
    "pygame >= 2.4.0",
    "gymnasium>=1.2.2",
]
