[tool.poetry]
name = "TEgym"
version = "0.1.0"
description = "Tennessee Eastman module for OpenAIgym"
authors = ["Martyn"]

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.21.0"
numpy = "1.19.3"
colorpy = {git = "https://github.com/markkness/ColorPy.git"}
tensorflow = "2.6.0"
matplotlib = "3.4.3"
pyglet = "1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
